<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/headerLocationSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/settings_location"
            android:textSize="20sp"
            android:textStyle="bold" />

            <EditText
                android:id="@+id/locationSettingInputBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/settings_location_input_hint" />

    </LinearLayout>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/cancelButton"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel_label"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/saveButton"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/save_label"
            style="?android:attr/buttonBarButtonStyle"/>
    </TableRow>

</androidx.constraintlayout.widget.ConstraintLayout>