<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/userImageHeader"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:fitsSystemWindows="true"
        android:scaleType="fitXY"
        android:contentDescription="@string/user_profile_description" />
    <TextView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/username_default_label"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:textSize="25sp"
        android:layout_below="@id/userImageHeader" />
    <TextView
        android:id="@+id/username"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="3dp"
        android:textSize="20sp"
        android:layout_below="@+id/header" />
    <TextView
        android:id="@+id/githubLink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/github_link_default_label"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:textSize="25sp"
        android:layout_below="@+id/username"/>
    <TextView
        android:id="@+id/link"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="3dp"
        android:textSize="20sp"
        android:layout_below="@+id/githubLink" />

    <TextView
        android:id="@+id/followersLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/followers_default_label"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:textSize="25sp"
        android:layout_below="@+id/link"/>

    <TextView
        android:id="@+id/followers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/followersLabel"
        android:layout_marginTop="3dp"
        android:textAlignment="center"
        android:textSize="20sp" />





</RelativeLayout>